# ToN-Simple-Save-Tool

./: .gitignore  LICENSE  README.md  index.html  package.json  terrorsname.json
.github/workflows/: release.yml
src/: App.tsx
src-dotnet/VROverlayApp/: Program.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: UpdateModal.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/pages/: AboutPage.tsx  HistoryPage.tsx  HomePage.tsx  RealtimePage.tsx  SettingsPage.tsx  index.ts
src/data/: terrorInfo.ts  terrorInfoData.ts  terrors.ts
